test_regress/t/t_randomize_method_types_unsup.out
%Warning-CONSTRAINTIGN: t/t_randomize_method_types_unsup.v:13:32: Unsupported: randomizing this expression, treating as state
   13 |    constraint dynsize { dynarr.size < 20; }
      |                                ^~~~
                        ... For warning description see https://verilator.org/warn/CONSTRAINTIGN?v=latest
                        ... Use "/* verilator lint_off CONSTRAINTIGN */" and lint_on around source to disable this message.
%Error-UNSUPPORTED: t/t_randomize_method_types_unsup.v:8:13: Unsupported: random member variable with type 'int$[string]'
                                                           : ... note: In instance 't'
    8 |    rand int assocarr[string];
      |             ^~~~~~~~
%Error: Verilator internal fault, sorry. Suggest trying --debug --gdbbt
%Error: Command Failed
